--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -97,13 +97,14 @@
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
   <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
-  <p id="portfolio"> Portfolio</p>
+  <p id="portfolio"> Portfolio =></p>
 </div>
 <div id="about_section">
   <div>
-    <h2> About </h2>
-    <br>
-    <p>
+  </div>
+  <h2> About </h2>
+  <br>
+  <p>
       I'm an application developer. I focus on IoT applications and development.
       I've had the fundamental backgrounds: Physics, Math, Computer Science in formal university undergrad education.
       In 2015, I shifted my focus toward programming.
@@ -111,5 +112,4 @@
       Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
       After that I tried online learning through Udacity, where I learned Neural Net and other Machine Learning techniques.
     </p>
-  </div>
 </div>
