--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -25,7 +25,8 @@
   height: 80%;
   width: 90%;
   margin-right: auto;
-  margin-left: auto; }
+  margin-left: auto;
+  font-size: .5em; }
   #menu table {
     border-collapse: collapse;
     text-align: center; }
@@ -35,15 +36,15 @@
     width: 33.333%; }
     #menu table td a {
       position: relative;
-      bottom: 10px;
+      bottom: 13px;
       right: 5px;
       background-color: black;
       width: 100%;
       font-size: 1.5em;
       font-weight: 600;
-      letter-spacing: 2px;
+      letter-spacing: .5em;
       text-decoration: none;
-      opacity: .7;
+      opacity: .9;
       color: #ffa117; }
 
 div#menu_button {
@@ -87,8 +88,7 @@ div#seattle_based_slogan {
     opacity: .7; }
   div#seattle_based_slogan p {
     color: #ffa117;
-    letter-spacing: .8px;
-    opacity: .9; }
+    letter-spacing: .8px; }
 
 img#seattle_skyline {
   margin-top: 70%;
@@ -137,28 +137,27 @@ div#about_section {
   background-repeat: no-repeat; }
   div#about_section div {
     background: linear-gradient(black, #5e5e5e);
-    opacity: .6;
+    opacity: .7;
     width: auto; }
-    div#about_section div h2 {
-      font-size: 4em;
-      display: block;
-      position: relative;
-      color: #ffa117;
-      left: 10%;
-      top: 5%;
-      width: 50%; }
-    div#about_section div p {
-      font-size: 1em;
-      position: relative;
-      left: 10%;
-      top: 5%;
-      padding-bottom: 20%;
-      color: white;
-      width: 85%;
-      height: auto;
-      z-index: 10; }
+  div#about_section h2 {
+    font-size: 4em;
+    display: block;
+    width: 50%;
+    position: relative;
+    color: #ffa117;
+    left: 10%;
+    top: -80%; }
+  div#about_section p {
+    position: relative;
+    left: 10%;
+    top: -80%;
+    padding-bottom: 20%;
+    color: white;
+    width: 85%;
+    height: auto;
+    z-index: 10; }
 
-@media (max-width: 700px) and (orientation: landscape) {
+@media (orientation: landscape) {
   div#tanner_card {
     padding-top: 10px;
     width: 100%;
@@ -195,26 +194,25 @@ div#about_section {
     background-repeat: no-repeat; }
     div#about_section div {
       background: linear-gradient(black, #5e5e5e);
-      opacity: .6;
+      opacity: .7;
       width: auto; }
-      div#about_section div h2 {
-        font-size: 4em;
-        display: block;
-        position: relative;
-        color: #ffa117;
-        left: 10%;
-        top: 5%;
-        width: 50%; }
-      div#about_section div p {
-        font-size: 1em;
-        position: relative;
-        left: 10%;
-        top: 5%;
-        padding-bottom: 20%;
-        color: white;
-        width: 65%;
-        height: auto;
-        z-index: 10; } }
+    div#about_section h2 {
+      font-size: 4em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: #ffa117;
+      left: 10%;
+      top: -90%; }
+    div#about_section p {
+      position: relative;
+      left: 10%;
+      top: -90%;
+      padding-bottom: 20%;
+      color: white;
+      width: 85%;
+      height: auto;
+      z-index: 10; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   div#seattle_based_slogan h3 {
     font-size: 6em; }
@@ -241,8 +239,7 @@ div#about_section {
     margin-left: auto;
     border-bottom: solid;
     bottom: 0px;
-    border-width: 1px;
-    font-size: em; }
+    border-width: 1px; }
 
   div#menu_button_flip {
     text-align: center;
@@ -263,7 +260,8 @@ div#about_section {
     height: 80%;
     width: 90%;
     margin-right: auto;
-    margin-left: auto; }
+    margin-left: auto;
+    font-size: .5em; }
     #menu table {
       border-collapse: collapse;
       text-align: center; }
@@ -271,19 +269,18 @@ div#about_section {
       height: auto; }
     #menu table td {
       width: 33.333%; }
-      #menu table td span {
-        background-color: black;
+      #menu table td a {
         position: relative;
         bottom: 35px;
-        right: 25px;
-        width: 100px;
-        font-size: 1.5em;
+        right: 20px;
+        background-color: black;
+        width: 100%;
+        font-size: 2em;
         font-weight: 600;
-        letter-spacing: 2px;
+        letter-spacing: 1em;
         text-decoration: none;
-        opacity: 1; }
-        #menu table td span a {
-          color: #ffa117; }
+        opacity: .9;
+        color: #ffa117; }
 
   div#seattle_based_slogan {
     display: block;
@@ -344,29 +341,7 @@ div#about_section {
     background: white url("../../assets/medias/running.png");
     background-position: left;
     background-size: auto 100%;
-    background-repeat: no-repeat; }
-    div#about_section div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .6;
-      width: auto; }
-      div#about_section div h2 {
-        font-size: 6em;
-        display: block;
-        position: relative;
-        color: #ffa117;
-        left: 10%;
-        top: 5%;
-        width: 50%; }
-      div#about_section div p {
-        font-size: 1em;
-        position: relative;
-        left: 10%;
-        top: 5%;
-        padding-bottom: 20%;
-        color: white;
-        width: 55%;
-        height: auto;
-        z-index: 10; } }
+    background-repeat: no-repeat; } }
 @media (min-width: 1200px) {
   #menu {
     position: static;
@@ -384,12 +359,12 @@ div#about_section {
       #menu table td a {
         position: relative;
         bottom: 45px;
-        right: 35px;
+        right: 30px;
         background-color: black;
         width: 100%;
-        font-size: 3em;
+        font-size: 2em;
         font-weight: 600;
-        letter-spacing: 2px;
+        letter-spacing: 1em;
         text-decoration: none;
         opacity: .9;
         color: #ffa117; }
@@ -473,7 +448,7 @@ div#about_section {
       font-weight: bold;
       font-size: 5em;
       position: relative;
-      bottom: 50%;
+      bottom: 65%;
       right: 5%;
       animation: move-the-object 1s infinite; }
 
@@ -481,29 +456,165 @@ div#about_section {
     height: 100%;
     background: white url("../../assets/medias/running.png");
     background-position: left;
-    background-size: auto 100%;
+    background-size: 100% auto;
     background-repeat: no-repeat; }
     div#about_section div {
       background: linear-gradient(black, #5e5e5e);
-      opacity: .6;
-      width: auto; }
-      div#about_section div h2 {
-        font-size: 6em;
-        display: block;
+      opacity: .7; }
+    div#about_section h2 {
+      font-size: 7em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: #ffa117;
+      left: 10%;
+      top: -80%; }
+    div#about_section p {
+      font-size: 2em;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: white;
+      width: 75%;
+      height: auto;
+      z-index: 10; } }
+@media (min-width: 1600px) {
+  #menu {
+    position: static;
+    height: 80%;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto; }
+    #menu table {
+      border-collapse: collapse;
+      text-align: center; }
+    #menu table tr {
+      height: auto; }
+    #menu table td {
+      width: 33.333%; }
+      #menu table td a {
         position: relative;
-        color: #ffa117;
-        left: 10%;
-        top: 5%;
-        width: 50%; }
-      div#about_section div p {
-        font-size: 2em;
-        position: relative;
-        left: 10%;
-        top: 5%;
-        padding-bottom: 20%;
-        color: white;
-        width: 55%;
-        height: auto;
-        z-index: 10; } }
+        bottom: 65px;
+        right: 30px;
+        background-color: black;
+        width: 100%;
+        font-size: 4em;
+        font-weight: 600;
+        letter-spacing: 1em;
+        text-decoration: none;
+        opacity: .9;
+        color: #ffa117; }
+
+  div#menu_button {
+    text-align: center;
+    width: 80%;
+    height: auto;
+    color: #333333;
+    font-size: 5em;
+    font-weight: lighter;
+    letter-spacing: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    border-bottom: solid;
+    bottom: 0px;
+    border-width: 1px;
+    font-size: em; }
+
+  div#menu_button_flip {
+    text-align: center;
+    width: 80%;
+    height: auto;
+    color: #333333;
+    font-size: 5em;
+    font-weight: lighter;
+    letter-spacing: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 3%;
+    border-top: solid;
+    border-width: 1px; }
+
+  div#seattle_based_slogan {
+    display: block;
+    text-align: center;
+    height: auto;
+    margin-top: 25%; }
+    div#seattle_based_slogan h3 {
+      font-size: 8em;
+      font-family: 'Ultra', serif;
+      padding-top: 10%;
+      padding-bottom: 0;
+      opacity: .7; }
+    div#seattle_based_slogan p {
+      font-size: 3em;
+      color: #ffa117;
+      letter-spacing: 1px;
+      opacity: .9; }
+
+  img#seattle_skyline {
+    margin-top: 70%;
+    height: auto;
+    width: 100%;
+    opacity: .5;
+    display: block;
+    filter: grayscale(100%);
+    -moz-box-shadow: inset 0 0 100px #ffffff;
+    -webkit-box-shadow: inset 0 0 100px #ffffff;
+    box-shadow: inset 0 0 60px #ffffff; }
+
+  div#tanner_card {
+    padding-top: 10px;
+    width: 100%;
+    height: 35%;
+    text-align: right;
+    color: white;
+    font-size: 2em;
+    background-color: #ffa117;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 10px #ffffff; }
+    div#tanner_card img {
+      position: relative;
+      width: auto;
+      height: 110%;
+      display: block;
+      bottom: 10%;
+      z-index: 0; }
+    div#tanner_card p#portfolio {
+      font-weight: bold;
+      font-size: 5em;
+      position: relative;
+      bottom: 65%;
+      right: 5%;
+      animation: move-the-object 1s infinite; }
+
+  div#about_section {
+    height: 100%;
+    background: white url("../../assets/medias/running.png");
+    background-position: left;
+    background-size: 100% auto;
+    background-repeat: no-repeat; }
+    div#about_section div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7; }
+    div#about_section h2 {
+      font-size: 7em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: #ffa117;
+      left: 10%;
+      top: -80%; }
+    div#about_section p {
+      font-size: 2em;
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: white;
+      width: 75%;
+      height: auto;
+      z-index: 10; } }
 
 /*# sourceMappingURL=main.component.css.map */
