--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -106,10 +106,10 @@
   <br>
   <p>
       I'm an application developer. I focus on IoT applications and development.
-      I've had the fundamental backgrounds: Physics, Math, Computer Science in formal university undergrad education.
-      In 2015, I shifted my focus toward programming.
+      I've had the fundamental backgrounds: Physics, Math, Computer Science in my undergrad education.
+      In 2015, I shifted my focus toward web application development.
       And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
       Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
-      After that I tried online learning through Udacity, where I learned Neural Net and other Machine Learning techniques.
+      Now I'm looking for a position as a front-end application developer.
     </p>
 </div>
