--- a/myapp/src/app/palette.scss
+++ b/myapp/src/app/palette.scss
@@ -1,7 +1,8 @@
 $white: #ffffff;
-$breakpoint-mobile: 700px;
-$breakpoint-tablet: 1200px;
-$breakpoint-desk: 1600px;
+$breakpoint-mobile: 425px;
+$breakpoint-tablet: 750px;
+$breakpoint-desk: 1599px;
+$breakpoint-desk-lrg: 1441px;
 $opacity_inactive: .8;
 $background_uri: none;
 
