--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -9,8 +9,7 @@
     -moz-transform: translateX(30px);
     -ms-transform: translateX(30px);
     -webkit-transform: translateX(30px);
-    transform: translateX(30px);
-    font-style: italic; } }
+    transform: translateX(30px); } }
 @keyframes moving_background {
   0%, 30% {
     transform: translateX(50px) rotate(50deg) translateY(15px); }
@@ -40,9 +39,8 @@
       right: 5px;
       background-color: black;
       width: 100%;
-      font-size: 1.5em;
-      font-weight: 600;
-      letter-spacing: .5em;
+      font-size: 2em;
+      letter-spacing: .4em;
       text-decoration: none;
       opacity: .9;
       color: #ffa117; }
@@ -52,7 +50,7 @@ div#menu_button {
   width: 80%;
   height: auto;
   color: #333333;
-  font-size: 35px;
+  font-size: 3em;
   font-weight: lighter;
   letter-spacing: 20px;
   margin-right: auto;
@@ -66,7 +64,7 @@ div#menu_button_flip {
   width: 80%;
   height: auto;
   color: #333333;
-  font-size: 35px;
+  font-size: 3em;
   font-weight: lighter;
   letter-spacing: 20px;
   margin-right: auto;
@@ -79,11 +77,10 @@ div#seattle_based_slogan {
   display: block;
   text-align: center;
   height: auto;
-  margin-top: 25%; }
+  margin-top: 20%; }
   div#seattle_based_slogan h3 {
-    font-size: 2.5em;
+    font-size: 2.7em;
     font-family: 'Ultra', serif;
-    padding-top: 10%;
     padding-bottom: 0;
     opacity: .7; }
   div#seattle_based_slogan p {
@@ -91,20 +88,20 @@ div#seattle_based_slogan {
     letter-spacing: .8px; }
 
 img#seattle_skyline {
-  margin-top: 70%;
+  margin-top: 50%;
   height: auto;
   width: 100%;
-  opacity: .5;
+  opacity: .1;
   display: block;
   filter: grayscale(100%);
   -moz-box-shadow: inset 0 0 100px #ffffff;
   -webkit-box-shadow: inset 0 0 100px #ffffff;
-  box-shadow: inset 0 0 60px #ffffff; }
+  box-shadow: inset 0 0 100px #ffffff; }
 
 div#tanner_card {
   padding-top: 10px;
   width: 100%;
-  height: 35%;
+  height: 10%;
   text-align: right;
   color: white;
   font-size: 2em;
@@ -115,7 +112,9 @@ div#tanner_card {
   div#tanner_card img {
     position: relative;
     width: auto;
-    height: 110%;
+    height: 160%;
+    top: -60%;
+    right: -5%;
     display: block;
     bottom: 10%;
     z-index: 0; }
@@ -124,9 +123,9 @@ div#tanner_card {
     width: auto;
     height: auto;
     font-weight: bold;
-    font-size: 2em;
-    bottom: 50%;
-    right: 15%;
+    font-size: 1.3em;
+    bottom: 150%;
+    right: 10%;
     animation: move-the-object 1s infinite; }
 
 div#about_section {
@@ -140,121 +139,25 @@ div#about_section {
     opacity: .7;
     width: auto; }
   div#about_section h2 {
-    font-size: 4em;
+    font-size: 5em;
     display: block;
     width: 50%;
     position: relative;
     color: #ffa117;
     left: 10%;
-    top: -80%; }
+    top: -90%; }
   div#about_section p {
     position: relative;
     left: 10%;
-    top: -80%;
+    top: -90%;
     padding-bottom: 20%;
     color: white;
-    width: 85%;
-    height: auto;
-    z-index: 10; }
-
-@media (orientation: landscape) {
-  div#tanner_card {
-    padding-top: 10px;
-    width: 100%;
-    height: 35%;
-    text-align: right;
-    color: white;
-    font-size: 2em;
-    background-color: #ffa117;
-    background-size: contain;
-    background-repeat: no-repeat;
-    box-shadow: inset 0 0 10px #ffffff; }
-    div#tanner_card img {
-      position: relative;
-      width: auto;
-      height: 110%;
-      display: block;
-      bottom: 10%;
-      z-index: 0; }
-    div#tanner_card p#portfolio {
-      position: relative;
-      width: auto;
-      height: auto;
-      font-weight: bold;
-      font-size: 2em;
-      bottom: 60%;
-      right: 15%;
-      animation: move-the-object 1s infinite; }
-
-  div#about_section {
-    height: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: left;
-    background-size: 100% auto;
-    background-repeat: no-repeat; }
-    div#about_section div {
-      background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
-      width: auto; }
-    div#about_section h2 {
-      font-size: 4em;
-      display: block;
-      width: 50%;
-      position: relative;
-      color: #ffa117;
-      left: 10%;
-      top: -90%; }
-    div#about_section p {
-      position: relative;
-      left: 10%;
-      top: -90%;
-      padding-bottom: 20%;
-      color: white;
-      width: 85%;
-      height: auto;
-      z-index: 10; } }
-@media (min-width: 701px) and (max-width: 1200px) {
-  div#seattle_based_slogan h3 {
-    font-size: 6em; }
-  div#seattle_based_slogan p {
-    font-size: 3em; }
-
-  div#tanner_card p#portfolio {
-    font-size: 4em; }
-
-  div#about_section {
-    font-size: 1.4em; }
-    div#about_section h2 {
-      font-size: 6em; }
-
-  div#menu_button {
-    text-align: center;
     width: 80%;
     height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    border-bottom: solid;
-    bottom: 0px;
-    border-width: 1px; }
+    z-index: 3;
+    font-size: 1em; }
 
-  div#menu_button_flip {
-    text-align: center;
-    width: 80%;
-    height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 3%;
-    border-top: solid;
-    border-width: 1px; }
-
+@media (min-width: 750px) {
   #menu {
     position: static;
     height: 80%;
@@ -271,49 +174,70 @@ div#about_section {
       width: 33.333%; }
       #menu table td a {
         position: relative;
-        bottom: 35px;
+        bottom: 30px;
         right: 20px;
         background-color: black;
         width: 100%;
         font-size: 2em;
-        font-weight: 600;
-        letter-spacing: 1em;
+        letter-spacing: .5em;
         text-decoration: none;
         opacity: .9;
         color: #ffa117; }
 
-  div#seattle_based_slogan {
-    display: block;
-    text-align: center;
-    height: auto;
-    margin-top: 25%; }
-    div#seattle_based_slogan h3 {
-      font-size: 5em;
-      font-family: 'Ultra', serif;
-      padding-top: 10%;
-      padding-bottom: 0;
-      opacity: .7; }
-    div#seattle_based_slogan p {
-      font-size: 3em;
-      color: #ffa117;
-      letter-spacing: 1px;
-      opacity: .9; }
+  div#seattle_based_slogan h3 {
+    font-size: 5em; }
+  div#seattle_based_slogan p {
+    font-size: 2em; }
 
   img#seattle_skyline {
-    margin-top: 70%;
+    margin-top: 50%;
     height: auto;
     width: 100%;
-    opacity: .5;
+    opacity: .1;
     display: block;
     filter: grayscale(100%);
     -moz-box-shadow: inset 0 0 100px #ffffff;
     -webkit-box-shadow: inset 0 0 100px #ffffff;
-    box-shadow: inset 0 0 60px #ffffff; }
+    box-shadow: inset 0 0 100px #ffffff; }
+
+  div#about_section {
+    height: 100%;
+    background: white url("../../assets/medias/running.png");
+    background-position: left;
+    background-size: 100% auto;
+    background-repeat: no-repeat; }
+    div#about_section div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7;
+      width: auto; }
+    div#about_section h2 {
+      font-size: 6em;
+      display: block;
+      width: 50%;
+      position: relative;
+      color: #ffa117;
+      left: 10%;
+      top: -85%; }
+    div#about_section p {
+      position: relative;
+      left: 10%;
+      top: -85%;
+      padding-bottom: 20%;
+      color: white;
+      width: 55%;
+      height: auto;
+      z-index: 3;
+      font-size: 1.2em; } }
+@media (orientation: landscape) {
+  div#seattle_based_slogan h3 {
+    font-size: 5em; }
+  div#seattle_based_slogan p {
+    font-size: 2em; }
 
   div#tanner_card {
     padding-top: 10px;
     width: 100%;
-    height: 35%;
+    height: 20%;
     text-align: right;
     color: white;
     font-size: 2em;
@@ -324,134 +248,51 @@ div#about_section {
     div#tanner_card img {
       position: relative;
       width: auto;
-      height: 110%;
+      height: 140%;
+      top: -40%;
+      right: -10%;
       display: block;
       bottom: 10%;
       z-index: 0; }
     div#tanner_card p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
       font-weight: bold;
+      font-size: 1.5em;
+      top: -140%;
+      right: 10%;
+      animation: move-the-object 1s infinite; }
+
+  div#about_section {
+    width: 100%;
+    background: white url("../../assets/medias/running.png");
+    background-position: center;
+    background-size: 100% auto;
+    background-repeat: no-repeat; }
+    div#about_section div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .7;
+      width: auto; }
+    div#about_section h2 {
       font-size: 4em;
-      position: relative;
-      bottom: 50%;
-      right: 5%;
-      animation: move-the-object 1s infinite; }
-
-  div#about_section {
-    height: 100%;
-    background: white url("../../assets/medias/running.png");
-    background-position: left;
-    background-size: auto 100%;
-    background-repeat: no-repeat; } }
-@media (min-width: 1200px) {
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto; }
-    #menu table {
-      border-collapse: collapse;
-      text-align: center; }
-    #menu table tr {
-      height: auto; }
-    #menu table td {
-      width: 33.333%; }
-      #menu table td a {
-        position: relative;
-        bottom: 45px;
-        right: 30px;
-        background-color: black;
-        width: 100%;
-        font-size: 2em;
-        font-weight: 600;
-        letter-spacing: 1em;
-        text-decoration: none;
-        opacity: .9;
-        color: #ffa117; }
-
-  div#menu_button {
-    text-align: center;
-    width: 80%;
-    height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    border-bottom: solid;
-    bottom: 0px;
-    border-width: 1px;
-    font-size: em; }
-
-  div#menu_button_flip {
-    text-align: center;
-    width: 80%;
-    height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 3%;
-    border-top: solid;
-    border-width: 1px; }
-
-  div#seattle_based_slogan {
-    display: block;
-    text-align: center;
-    height: auto;
-    margin-top: 25%; }
-    div#seattle_based_slogan h3 {
-      font-size: 8em;
-      font-family: 'Ultra', serif;
-      padding-top: 10%;
-      padding-bottom: 0;
-      opacity: .7; }
-    div#seattle_based_slogan p {
-      font-size: 3em;
-      color: #ffa117;
-      letter-spacing: 1px;
-      opacity: .9; }
-
-  img#seattle_skyline {
-    margin-top: 70%;
-    height: auto;
-    width: 100%;
-    opacity: .5;
-    display: block;
-    filter: grayscale(100%);
-    -moz-box-shadow: inset 0 0 100px #ffffff;
-    -webkit-box-shadow: inset 0 0 100px #ffffff;
-    box-shadow: inset 0 0 60px #ffffff; }
-
-  div#tanner_card {
-    padding-top: 10px;
-    width: 100%;
-    height: 35%;
-    text-align: right;
-    color: white;
-    font-size: 2em;
-    background-color: #ffa117;
-    background-size: contain;
-    background-repeat: no-repeat;
-    box-shadow: inset 0 0 10px #ffffff; }
-    div#tanner_card img {
-      position: relative;
-      width: auto;
-      height: 110%;
       display: block;
-      bottom: 10%;
-      z-index: 0; }
-    div#tanner_card p#portfolio {
-      font-weight: bold;
-      font-size: 5em;
+      width: 50%;
       position: relative;
-      bottom: 65%;
-      right: 5%;
-      animation: move-the-object 1s infinite; }
-
+      color: #ffa117;
+      left: 10%;
+      top: -80%; }
+    div#about_section p {
+      position: relative;
+      left: 10%;
+      top: -80%;
+      padding-bottom: 20%;
+      color: white;
+      width: 45%;
+      height: auto;
+      z-index: 3;
+      font-size: 1.5em; } }
+@media (orientation: landscape) and (max-width: 750px) {
   div#about_section {
     height: 100%;
     background: white url("../../assets/medias/running.png");
@@ -460,146 +301,44 @@ div#about_section {
     background-repeat: no-repeat; }
     div#about_section div {
       background: linear-gradient(black, #5e5e5e);
-      opacity: .7; }
+      opacity: .7;
+      width: auto; }
     div#about_section h2 {
-      font-size: 7em;
+      font-size: 6em;
       display: block;
       width: 50%;
       position: relative;
       color: #ffa117;
       left: 10%;
-      top: -80%; }
+      top: -87%; }
     div#about_section p {
-      font-size: 2em;
       position: relative;
       left: 10%;
-      top: -80%;
+      top: -90%;
       padding-bottom: 20%;
       color: white;
       width: 75%;
       height: auto;
-      z-index: 10; } }
-@media (min-width: 1600px) {
-  #menu {
-    position: static;
-    height: 80%;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto; }
-    #menu table {
-      border-collapse: collapse;
-      text-align: center; }
-    #menu table tr {
-      height: auto; }
-    #menu table td {
-      width: 33.333%; }
-      #menu table td a {
-        position: relative;
-        bottom: 65px;
-        right: 30px;
-        background-color: black;
-        width: 100%;
-        font-size: 4em;
-        font-weight: 600;
-        letter-spacing: 1em;
-        text-decoration: none;
-        opacity: .9;
-        color: #ffa117; }
-
-  div#menu_button {
-    text-align: center;
-    width: 80%;
-    height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    border-bottom: solid;
-    bottom: 0px;
-    border-width: 1px;
-    font-size: em; }
-
-  div#menu_button_flip {
-    text-align: center;
-    width: 80%;
-    height: auto;
-    color: #333333;
-    font-size: 5em;
-    font-weight: lighter;
-    letter-spacing: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 3%;
-    border-top: solid;
-    border-width: 1px; }
-
-  div#seattle_based_slogan {
-    display: block;
-    text-align: center;
-    height: auto;
-    margin-top: 25%; }
-    div#seattle_based_slogan h3 {
-      font-size: 8em;
-      font-family: 'Ultra', serif;
-      padding-top: 10%;
-      padding-bottom: 0;
-      opacity: .7; }
-    div#seattle_based_slogan p {
-      font-size: 3em;
-      color: #ffa117;
-      letter-spacing: 1px;
-      opacity: .9; }
-
-  img#seattle_skyline {
-    margin-top: 70%;
-    height: auto;
-    width: 100%;
-    opacity: .5;
-    display: block;
-    filter: grayscale(100%);
-    -moz-box-shadow: inset 0 0 100px #ffffff;
-    -webkit-box-shadow: inset 0 0 100px #ffffff;
-    box-shadow: inset 0 0 60px #ffffff; }
-
-  div#tanner_card {
-    padding-top: 10px;
-    width: 100%;
-    height: 35%;
-    text-align: right;
-    color: white;
-    font-size: 2em;
-    background-color: #ffa117;
-    background-size: contain;
-    background-repeat: no-repeat;
-    box-shadow: inset 0 0 10px #ffffff; }
-    div#tanner_card img {
-      position: relative;
-      width: auto;
-      height: 110%;
-      display: block;
-      bottom: 10%;
-      z-index: 0; }
-    div#tanner_card p#portfolio {
-      font-weight: bold;
-      font-size: 5em;
-      position: relative;
-      bottom: 65%;
-      right: 5%;
-      animation: move-the-object 1s infinite; }
+      z-index: 3;
+      font-size: .9em; } }
+@media (min-width: 1441px) {
+  div#seattle_based_slogan h3 {
+    font-size: 5em; }
+  div#seattle_based_slogan p {
+    font-size: 2em; }
 
   div#about_section {
-    height: 100%;
+    width: 100%;
     background: white url("../../assets/medias/running.png");
-    background-position: left;
+    background-position: center;
     background-size: 100% auto;
     background-repeat: no-repeat; }
     div#about_section div {
       background: linear-gradient(black, #5e5e5e);
-      opacity: .7; }
+      opacity: .7;
+      width: auto; }
     div#about_section h2 {
-      font-size: 7em;
+      font-size: 9em;
       display: block;
       width: 50%;
       position: relative;
@@ -607,14 +346,14 @@ div#about_section {
       left: 10%;
       top: -80%; }
     div#about_section p {
-      font-size: 2em;
       position: relative;
       left: 10%;
       top: -80%;
       padding-bottom: 20%;
       color: white;
-      width: 75%;
+      width: 45%;
       height: auto;
-      z-index: 10; } }
+      z-index: 3;
+      font-size: 3em; } }
 
 /*# sourceMappingURL=main.component.css.map */
