cross-browser fix

--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -36,58 +36,6 @@
     </tr>
   </table>
 </div>
-<!--<div id="menu_button"> menu </div>-->
-
-<!--<div id='secondary'>-->
-  <!--<ul id="bread_crums">-->
-    <!--&lt;!&ndash;<span> | </span>&ndash;&gt;-->
-    <!--&lt;!&ndash;<li (click)="menu_onClick($event, 'myself')"&ndash;&gt;-->
-        <!--&lt;!&ndash;[ngClass]="menu_state == 'myself'? 'selected':''">&ndash;&gt;-->
-      <!--&lt;!&ndash;myself&ndash;&gt;-->
-    <!--&lt;!&ndash;</li>&ndash;&gt;-->
-    <!--&lt;!&ndash;<span> | </span>&ndash;&gt;-->
-    <!--<li *ngFor="let item of menu_items"-->
-        <!--(click)="menu_onClick($event, item)"-->
-        <!--[ngClass]="menu_state == item? 'selected':''">-->
-      <!--{{item}}-->
-      <!--<span> | </span>-->
-    <!--</li>-->
-  <!--</ul>-->
-
-  <!--<span id="content">-->
-    <!--<div id="me_wrap">-->
-      <!--<div id="me"></div>-->
-    <!--</div>-->
-    <!--&lt;!&ndash;<div id="me"></div>&ndash;&gt;-->
-    <!--<p id="content_span">-->
-      <!--&lt;!&ndash;<span id="content_text"&ndash;&gt;-->
-      <!--&lt;!&ndash;[style.display]="monolog_pane_showorhide('bio')">I started hacking at 12 years old when AOL was giving out free internet access on a disc.&ndash;&gt;-->
-      <!--&lt;!&ndash;Now I enjoy writing software applications to solve efficiency problems.&ndash;&gt;-->
-      <!--&lt;!&ndash;</span>&ndash;&gt;-->
-      <!--<span id="content_text"-->
-            <!--[style.display]="monolog_pane_showorhide('bio')">-->
-        <!--I'm driven to build applications that help us be the best versions of ourselves.-->
-        <!--I study old habits and leverage cutting-edge technologies to find possible solutions.-->
-        <!--On my downtime, I enjoy traveling, talking to people, and learning new cultures.-->
-      <!--</span>-->
-      <!--<span id="people"-->
-            <!--[style.display]="monolog_pane_showorhide('people')">-->
-        <!--As people, I believe we are at our best when we seek the best for one another.-->
-       <!--I enjoy working with people and empowering the ones next to me.-->
-        <!--A strong bond can withhold any obstacles in achieving the team goals.-->
-      <!--</span>-->
-       <!--<span id="about"-->
-             <!--[style.display]="monolog_pane_showorhide('about')">-->
-         <!--Application Software Programmer-->
-         <!--<br>-->
-         <!--Based in Seattle Washington-->
-       <!--</span>-->
-      <!--</p>-->
-    <!--</span>-->
-
-
-<!--</div>-->
-
 <div id="seattle_based_slogan">
   <h3> SEATTLE BASED </h3>
   <p> Frontend Programmer</p>
@@ -97,7 +45,7 @@
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
   <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
-  <p id="portfolio"> Portfolio =></p>
+  <p id="portfolio"> Portfolio 	&rArr;</p>
 </div>
 <div id="about_section">
   <div>
@@ -109,7 +57,7 @@
       I've had the fundamental backgrounds: Physics, Math, Computer Science in my undergrad education.
       In 2015, I shifted my focus toward web application development.
       And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
-      Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
-      Now I'm looking for a position as a front-end application developer.
+      Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
+      with some really passionate people. Now I'm looking for a position as a front-end application developer.
     </p>
 </div>
