--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -187,7 +187,7 @@
 }
 
 //large desktop
-@media (min-width: $breakpoint-desk-lrg +1){
+@media (min-width: $breakpoint-desk +1){
   div#footer{
     // @include gradient-animation( #ffa117, #464646, 1s);
     display: inline-block;
