--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -259,8 +259,8 @@ div#about_section {
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 1.5em;
-      top: -140%;
+      font-size: 2em;
+      top: -110%;
       right: 10%;
       animation: move-the-object 1s infinite; }
 
@@ -275,11 +275,11 @@ div#about_section {
       opacity: .7;
       width: auto; }
     div#about_section h2 {
-      font-size: 4em;
+      font-size: 6em;
       display: block;
       width: 50%;
       position: relative;
-      color: #ffa117;
+      color: white;
       left: 10%;
       top: -80%; }
     div#about_section p {
@@ -327,6 +327,36 @@ div#about_section {
   div#seattle_based_slogan p {
     font-size: 2em; }
 
+  div#tanner_card {
+    padding-top: 10px;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    color: white;
+    font-size: 2em;
+    background-color: #ffa117;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 10px #ffffff; }
+    div#tanner_card img {
+      position: relative;
+      width: auto;
+      height: 140%;
+      top: -40%;
+      right: -10%;
+      display: block;
+      bottom: 10%;
+      z-index: 0; }
+    div#tanner_card p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 4em;
+      top: -110%;
+      right: 10%;
+      animation: move-the-object 1s infinite; }
+
   div#about_section {
     width: 100%;
     background: white url("../../assets/medias/running.png");
@@ -354,6 +384,6 @@ div#about_section {
       width: 45%;
       height: auto;
       z-index: 3;
-      font-size: 3em; } }
+      font-size: em; } }
 
 /*# sourceMappingURL=main.component.css.map */
