--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -289,7 +289,6 @@ div#about_section {
        font-size: 2em;
      }
    }
-
    div#tanner_card {
     padding-top: 10px;
     width: 100%;
@@ -318,8 +317,8 @@ div#about_section {
       width: auto;
       height: auto;
       font-weight: bold;
-      font-size: 1.5em;
-      top: -140%;
+      font-size: 2em;
+      top: -110%;
       right: 10%;
       animation: move-the-object 1s infinite;
     }
@@ -338,11 +337,11 @@ div#about_section {
       width: auto;
     }
     h2 {
-      font-size: 4em;
+      font-size: 6em;
       display: block;
       width: 50%;
       position: relative;
-      color: $cust-orange;
+      color:white;
       left: 10%;
       top: -80%;
     }
@@ -403,7 +402,38 @@ div#about_section {
       font-size: 2em;
     }
   }
-
+  div#tanner_card {
+    padding-top: 10px;
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    color: white;
+    font-size: 2em;
+    background-color: $cust-orange;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 10px #ffffff;
+    img {
+      position: relative;
+      width: auto;
+      height: 140%;
+      top: -40%;
+      right: -10%;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
+    }
+    p#portfolio {
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 4em;
+      top: -110%;
+      right: 10%;
+      animation: move-the-object 1s infinite;
+    }
+  }
   div#about_section {
     width: 100%;
     background: white url('../../assets/medias/running.png');
@@ -435,7 +465,7 @@ div#about_section {
       width: 45%;
       height: auto;
       z-index: 3;
-      font-size: 3em;
+      font-size: em;
     }
   }
 
