--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -384,6 +384,6 @@ div#about_section {
       width: 45%;
       height: auto;
       z-index: 3;
-      font-size: em; } }
+      font-size: 2em; } }
 
 /*# sourceMappingURL=main.component.css.map */
