--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -3,35 +3,35 @@
   <table>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
+        <span><a href="">future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-      <span><a href="">social</a></span>
+      <span><a href="">future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-       <span><a href="">social</a></span>
-      </td>
-    </tr>
-    <tr>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
+       <span><a href="">future</a></span>
       </td>
     </tr>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
+        <span><a href="">future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
+        <span><a href="">future</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">social</a></span>
+        <span><a href="">future</a></span>
+      </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">future</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">future</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">future</a></span>
       </td>
     </tr>
   </table>
@@ -40,12 +40,12 @@
   <h3> SEATTLE BASED </h3>
   <p> Frontend Programmer</p>
 <img id="seattle_skyline"
-     src="../../assets/medias/seattle_skyline.png">
+     src="../../assets/medias/seattrle_skyline.png">
 </div>
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
   <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
-  <p id="portfolio"> Portfolio 	&rArr;</p>
+  <p id="portfolio" (click)="click_portfolio()"> Portfolio 	&rArr;</p>
 </div>
 <div id="about_section">
   <div>
