--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -32,9 +32,6 @@
   }
 }
 
-$cust-orange: #ffa117;
-$link-font-color: $cust-orange;
-
 #menu {
   position: static;
   height: 80%;
@@ -387,8 +384,7 @@ div#about_section {
          width: 75%;
          height: auto;
          z-index: 3;
-         font-size: .9em;
-       }
+         font-size: .9em; }
      }
    }
 }
@@ -465,7 +461,7 @@ div#about_section {
       width: 45%;
       height: auto;
       z-index: 3;
-      font-size: em;
+      font-size: 2em;
     }
   }
 
