--- a/myapp/src/app/palette.scss
+++ b/myapp/src/app/palette.scss
@@ -6,3 +6,6 @@ $breakpoint-desk-lrg: 1441px;
 $opacity_inactive: .8;
 $background_uri: none;
 
+
+$cust-orange: #ffa117;
+$link-font-color: $cust-orange;
