--- a/myapp/src/app/blog/blog.component.css
+++ b/myapp/src/app/blog/blog.component.css
@@ -7,7 +7,7 @@ h1 {
 
 #hashtagnav {
   position: fixed;
-  width: 30%;
+  width: 10%;
   background-color: black;
   opacity: .8;
   color: white; }
@@ -15,30 +15,43 @@ h1 {
     background-color: #63eeff;
     opacity: .8; }
   #hashtagnav #reset {
-    background-color: red;
+    background-color: #ffa117;
     opacity: .8; }
   #hashtagnav #filter_list {
     margin-top: 20px; }
 
 #content {
-  width: 70%;
-  margin-left: 30%;
+  width: 100%;
   background-color: white; }
   #content ul {
-    background-color: black;
-    opacity: .6;
-    width: 100%;
+    background-color: white;
+    width: 90%;
+    height: 100%;
     padding-top: 20px;
-    list-style: none; }
+    list-style: none;
+    margin-right: auto;
+    margin-left: auto; }
     #content ul li {
-      display: inline-flex;
-      transition: 0.9s;
-      transform-style: preserve-3d;
-      transform-origin: 100% 50%;
-      margin-top: 20px;
-      background-color: #c4c6c6;
-      height: 120px; }
-    #content ul li:active, #content ul li:hover {
-      transform: rotateX(180deg); }
+      margin-top: 8%;
+      height: 29%;
+      width: 100%;
+      color: white;
+      filter: grayscale(0.2);
+      -webkit-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
+      padding: 5px;
+      border-radius: 5px 5px; }
+      #content ul li span {
+        background-color: #ffa117;
+        width: auto;
+        height: auto;
+        font-weight: 600;
+        opacity: .9; }
+        #content ul li span h1 {
+          border-radius: 5px 5px;
+          font-size: 1.4em;
+          background-color: #ffa117;
+          width: auto; }
 
 /*# sourceMappingURL=blog.component.css.map */
