--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -1,15 +1,27 @@
-<div id="hashtagnav">
-  <h1 id="filter_title"> F I L T E R S</h1>
-  <h1 id="back" class="button"> B A C K </h1>
-  <h1 id="reset"> R E S E T </h1>
+<!--<div id="hashtagnav">-->
+  <!--<h1 id="back" class="button"> B A C K </h1>-->
+  <!--<h1 id="filter_title"> F I L T E R S</h1>-->
+  <!--<h1 id="reset"> R E S E T </h1>-->
 
-  <ul id="filter_list">
-    <li>#helloworld</li>
-  </ul>
-</div>
+  <!--<ul id="filter_list">-->
+    <!--<li>#helloworld</li>-->
+  <!--</ul>-->
+<!--</div>-->
 
 <div id="content">
   <ul>
-    <li *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8 , 8, 9, 9]"> {{i}}</li>
+    <li *ngFor="let project of projects"
+        [style.background-image] = " 'url(' + project.path + ')'"
+        style="background-position: center">
+      <span>
+        <h1>Name: {{project.name}}</h1>
+        <br>
+        Type: {{project.projectType}}
+        <br>
+        Duration: {{project.length}}
+        <br>
+      </span>
+    </li>
   </ul>
 </div>
+        <!--[ngStyle]= "{'background-image': 'url(' + project.path + ')'}"-->
