--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -1,3 +1,5 @@
+@import'../palette.scss';
+
 div{
   text-align: center;
 }
@@ -7,7 +9,7 @@ h1{
 }
 #hashtagnav{
   position: fixed;
-  width: 30%;
+  width: 10%;
   background-color: black;
   opacity: .8;
   color: white;
@@ -18,7 +20,7 @@ h1{
   #filter_title{
   }
   #reset{
-    background-color: red;
+    background-color: $cust-orange;
     opacity:.8;
   }
   #filter_list{
@@ -26,26 +28,42 @@ h1{
   }
 }
 #content{
-  width: 70%;
-  margin-left: 30%;
+  width: 100%;
+  //margin-left: 10%;
   background-color: white;
   ul{
-    background-color: black;
-    opacity: .6;
-    width: 100%;
+    background-color: white;
+   // opacity: .6;
+    width: 90%;
+    height: 100%;
     padding-top: 20px;
     list-style: none;
+    margin-right: auto;
+    margin-left: auto;
     li{
-      display: inline-flex;
-      transition: 0.9s;
-      transform-style: preserve-3d;
-      transform-origin: 100% 50%;
-      margin-top: 20px;
-      background-color: #c4c6c6;
-      height: 120px;
-    }
-    li:active, li:hover{
-      transform: rotateX(180deg)
+      margin-top: 8%;
+      height: 29%;
+      width: 100%;
+      color: white;
+      filter: grayscale(.2);
+      -webkit-box-shadow: -10px -1px 24px 0px rgba(0,0,0,0.75);
+      -moz-box-shadow: -10px -1px 24px 0px rgba(0,0,0,0.75);
+      box-shadow: -10px -1px 24px 0px rgba(0,0,0,0.75);
+      padding: 5px;
+      border-radius: 5px 5px;
+      span{
+          background-color: $cust-orange;
+          width: auto;
+          height: auto;
+          font-weight: 600;
+          opacity: .9;
+        h1{
+            border-radius: 5px 5px;
+            font-size: 1.4em;
+            background-color: $cust-orange;
+            width: auto;
+          }
+      }
     }
   }
 }
