--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -7,7 +7,7 @@
     <!--<li>#helloworld</li>-->
   <!--</ul>-->
 <!--</div>-->
-
+  <h1 id='portfolio'> Portfolio</h1>
 <div id="content">
   <ul>
     <li *ngFor="let project of projects"
