--- a/myapp/src/app/blog/blog.component.scss
+++ b/myapp/src/app/blog/blog.component.scss
@@ -1,47 +1,52 @@
 @import'../palette.scss';
 
-div{
-  text-align: center;
-}
-h1{
-  height: 50px;
-  line-height: 3;
-}
-#hashtagnav{
-  position: fixed;
-  width: 10%;
-  background-color: black;
-  opacity: .8;
-  color: white;
-  #back{
-    background-color: #63eeff;
-    opacity:.8;
+//div{
+//  text-align: center;
+//}
+//h1{
+//  height: 50px;
+//  line-height: 3;
+//}
+//#hashtagnav{
+//  position: fixed;
+//  width: 10%;
+//  background-color: black;
+//  opacity: .8;
+//  color: white;
+//  #back{
+//    background-color: #63eeff;
+//    opacity:.8;
+//  }
+//  #filter_title{
+//  }
+//  #reset{
+//    background-color: $cust-orange;
+//    opacity:.8;
+//  }
+//  #filter_list{
+//    margin-top: 20px;
+//  }
+//}
+
+  h1{
+    font-size: 4em;
+    color: black;
   }
-  #filter_title{
-  }
-  #reset{
-    background-color: $cust-orange;
-    opacity:.8;
-  }
-  #filter_list{
-    margin-top: 20px;
-  }
-}
 #content{
   width: 100%;
-  //margin-left: 10%;
   background-color: white;
   ul{
     background-color: white;
    // opacity: .6;
     width: 90%;
-    height: 100%;
+    height: 110%;
     padding-top: 20px;
     list-style: none;
     margin-right: auto;
     margin-left: auto;
     li{
       margin-top: 8%;
+      margin-bottom: 8%;
       height: 29%;
       width: 100%;
       color: white;
