--- a/myapp/src/app/blog/blog.component.css
+++ b/myapp/src/app/blog/blog.component.css
@@ -1,11 +1,32 @@
-h1 {
-  font-size: 4em;
-  color: black; }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0; }
 
-#content {
+div#utility {
+  color: #ffa117;
+  height: auto;
+  margin-bottom: 0; }
+  div#utility h1#portfolio {
+    margin-top: 5%;
+    margin-bottom: 3%;
+    font-size: 4.5em;
+    color: #ffa117;
+    text-align: center; }
+  div#utility span {
+    position: relative;
+    margin-left: 9%;
+    font-size: 1.4em; }
+  div#utility span#right_side {
+    position: relative;
+    right: -55%;
+    font-size: 1.1em;
+    text-align: right; }
+
+div#content {
   width: 100%;
   background-color: white; }
-  #content ul {
+  div#content ul {
     background-color: white;
     width: 90%;
     height: 110%;
@@ -13,28 +34,52 @@ h1 {
     list-style: none;
     margin-right: auto;
     margin-left: auto; }
-    #content ul li {
+    div#content ul li {
+      padding: 5px;
       margin-top: 8%;
       margin-bottom: 8%;
-      height: 29%;
+      height: 30%;
       width: 100%;
-      color: white;
-      filter: grayscale(0.2);
-      -webkit-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
-      box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.75);
-      padding: 5px;
+      color: black;
+      -webkit-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
+      -moz-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
+      box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
       border-radius: 5px 5px; }
-      #content ul li span {
+      div#content ul li span {
         background-color: #ffa117;
         width: auto;
         height: auto;
         font-weight: 600;
-        opacity: .9; }
-        #content ul li span h1 {
+        opacity: .6; }
+        div#content ul li span h1 {
+          opacity: .9;
+          text-align: center;
           border-radius: 5px 5px;
           font-size: 1.4em;
           background-color: #ffa117;
           width: auto; }
+        div#content ul li span span#duration {
+          font-size: .8em; }
+      div#content ul li div#bottom_bar {
+        text-align: right;
+        bottom: -30%;
+        height: 16%;
+        position: relative;
+        border-radius: 5px;
+        opacity: .7; }
+        div#content ul li div#bottom_bar img {
+          position: relative;
+          bottom: -40%;
+          width: 8%; }
+        div#content ul li div#bottom_bar button#demo {
+          width: auto;
+          height: 200%;
+          opacity: 1;
+          padding: 1%;
+          border-radius: 10%;
+          color: white;
+          font-weight: bold;
+          font-size: .7em;
+          background-color: #ffa117; }
 
 /*# sourceMappingURL=blog.component.css.map */
