--- a/myapp/src/app/blog/blog.component.html
+++ b/myapp/src/app/blog/blog.component.html
@@ -7,20 +7,33 @@
     <!--<li>#helloworld</li>-->
   <!--</ul>-->
 <!--</div>-->
+<div id='utility'>
   <h1 id='portfolio'> Portfolio</h1>
+  <span (click)="back_button()">&#8678;</span>
+    <!--<span (click)="back_button()" style="magin:0">back</span>-->
+  <a id="right_side" target="_blank"
+        href='../../assets/TannerPhan%202017%20Resume.pdf>Resume</a>
+</div>
 <div id="content">
   <ul>
     <li *ngFor="let project of projects"
         [style.background-image] = " 'url(' + project.path + ')'"
         style="background-position: center">
+      <!--<video id="video-background" #movieplayer>-->
+        <!--<source src="https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761" type="video/mp4">-->
+      <!--</video>-->
       <span>
-        <h1>Name: {{project.name}}</h1>
+        <h1>Project: {{project.name}}</h1>
         <br>
         Type: {{project.projectType}}
         <br>
-        Duration: {{project.length}}
+        <span id="duration"> Time: {{project.length}}</span>
         <br>
       </span>
+      <div id='bottom_bar'>
+        <img src="../../assets/medias/github.png">
+        <button id="demo" (click)="movieplayer.play"> {{project.func}} </button>
+      </div>
     </li>
   </ul>
 </div>
