--- a/myapp/src/app/main/main.component.css
+++ b/myapp/src/app/main/main.component.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra");
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0; }
+
 @keyframes move-the-object {
   0%, 30% {
     -moz-transform: translateX(-30);
@@ -385,5 +390,141 @@ div#about_section {
       height: auto;
       z-index: 3;
       font-size: 2em; } }
+@media (max-width: 425px) {
+  div#footer {
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 13%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 3%;
+        width: auto;
+        height: 45%;
+        opacity: .7; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: .6em;
+      letter-spacing: 2px; } }
+@media (max-width: 425px) and (orientation: landscape) {
+  div#footer {
+    width: 100%;
+    height: 20%; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        width: auto;
+        height: 30%; }
+    div#footer p {
+      font-size: .6em; } }
+@media (min-width: 426px) and (max-width: 750px) {
+  div#footer {
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 13%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 1%;
+        width: auto;
+        height: 40%;
+        opacity: .8; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: .8em;
+      letter-spacing: 3px; } }
+@media (min-width: 426px) and (max-width: 750px) and (orientation: landscape) {
+  div#footer {
+    background-color: white;
+    width: 100%;
+    height: 15%; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 1%;
+        height: 45%;
+        width: auto; }
+    div#footer p {
+      font-size: 1em; } }
+@media (min-width: 751px) and (max-width: 1599px) {
+  div#footer {
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 1%;
+        width: auto;
+        height: 50%;
+        opacity: .7; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: 1.2em;
+      letter-spacing: 3px; } }
+@media (min-width: 1600px) {
+  div#footer {
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 1%;
+        width: auto;
+        height: 50%;
+        opacity: .7; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: 1.4em;
+      letter-spacing: 3px; } }
 
 /*# sourceMappingURL=main.component.css.map */
