--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -40,7 +40,7 @@
   <h3> SEATTLE BASED </h3>
   <p> Frontend Programmer</p>
 <img id="seattle_skyline"
-     src="../../assets/medias/seattrle_skyline.png">
+     src="../../assets/medias/seattle_skyline.png">
 </div>
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
@@ -60,4 +60,22 @@
       Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup
       with some really passionate people. Now I'm looking for a position as a front-end application developer.
     </p>
+</div>
+<div id="footer">
+<span id="socialmedia">
+<a href='https://www.linkedin.com/in/tanner-phan-b70999aa/' target='_top'>
+<img id="social_icon" src="assets/medias/linkedin_blk.png">
+</a>
+<a href='https://twitter.com/tannerphan?lang=en' target='_top'>
+<img id="social_icon" src="assets/medias/twitter.png">
+</a>
+<a href='https://www.instagram.com/tann3rphan/' target='_top'>
+<img id="social_icon" src="assets/medias/instagram.png">
+</a>
+<a href='https://github.com/tannerP' target='_top'>
+<img id="social_icon" src="assets/medias/github.png">
+</a>
+</span>
+<!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
+<p> &copy; Tanner Phan 2017</p>
 </div>
