--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -464,5 +464,228 @@ div#about_section {
       font-size: 2em;
     }
   }
+}
+
+@mixin gradient-animation( $start, $end, $transTime ){
+  background-size: 100%;
+  background-image: -webkit-linear-gradient($start, $end);
+  background-image: linear-gradient($start, $end);
+  position: relative;
+  z-index: 100;
+  &:before {
+    border-radius: inherit;
+    background-image: -webkit-linear-gradient($end, $start);
+    background-image: linear-gradient($end, $start);
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0; left: 0;
+    opacity: 0;
+    z-index: -100;
+    -moz-transition: opacity $transTime ease-in-out;
+    -webkit-transition: opacity $transTime ease-in-out;
+    transition: opacity $transTime ease-in-out;
+  }
+  &:hover {
+    &:before {
+      opacity: 1;
+    }
+  }
+}
+// Mobile
+@media(max-width: $breakpoint-mobile) {
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 13%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 3%;
+        width: auto;
+        height: 45%;
+        opacity: .7;
+      }
+    }
+    p{
+      text-align: center;
+      color: #ffa117;
+      font-size: .6em;
+      letter-spacing: 2px;
+    }
+  }
+}
+//mobile landscape
+@media(max-width: $breakpoint-mobile) and (orientation: landscape) {
+  div#footer{
+    width: 100%;
+    height: 20%;
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    span#socialmedia{
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        width: auto;
+        height: 30%;
+      }
+    }
+    p{
+      font-size: .6em;
+    }
+  }
+}
+
+//tablet
+@media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 13%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 1%;
+        width: auto;
+        height: 40%;
+        opacity: .8;
+      }
+    }
+    p{
+      text-align: center;
+      color: #ffa117;
+      font-size: .8em;
+      letter-spacing: 3px;
+    }
+  }
+}
+//tablet landscape
+@media(min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet)
+and (orientation: landscape) {
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    background-color: white;
+    width: 100%;
+    height: 15%;
+    span#socialmedia{
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 1%;
+        height: 45%;
+        width: auto;
+      }
+    }
+    p{
+      font-size: 1em;
+    }
+  }
+}
+
+//laptop
+@media (min-width: $breakpoint-tablet +1) and (max-width: $breakpoint-desk){
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 1%;
+        width: auto;
+        height: 50%;
+        opacity: .7;
+      }
+    }
+    p{
+      //margin-top: 1%;
+      text-align: center;
+      color: #ffa117;
+      font-size: 1.2em;
+      letter-spacing: 3px;
+    }
+  }
 
 }
+
+//large desktop
+@media (min-width: $breakpoint-desk +1){
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9;
+    span#socialmedia{
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 1%;
+        width: auto;
+        height: 50%;
+        opacity: .7;
+      }
+    }
+    p{
+      //margin-top: 1%;
+      text-align: center;
+      color: #ffa117;
+      font-size: 1.4em;
+      letter-spacing: 3px;
+    }
+  }
+
+}
+
