finished blog page

--- a/myapp/src/app/blog/blog.component.css
+++ b/myapp/src/app/blog/blog.component.css
@@ -6,7 +6,8 @@ html, body {
 div#utility {
   color: #ffa117;
   height: auto;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  opacity: .7; }
   div#utility h1#portfolio {
     margin-top: 5%;
     margin-bottom: 3%;
@@ -14,13 +15,16 @@ div#utility {
     color: #ffa117;
     text-align: center; }
   div#utility span {
-    position: relative;
-    margin-left: 9%;
+    margin-left: 8%;
     font-size: 1.4em; }
-  div#utility span#right_side {
-    position: relative;
-    right: -55%;
-    font-size: 1.1em;
+  div#utility a#right_side {
+    width: auto;
+    height: auto;
+    color: #ffa117;
+    position: absolute;
+    right: 8%;
+    font-size: 1em;
+    font-weight: 600;
     text-align: right; }
 
 div#content {
@@ -28,52 +32,50 @@ div#content {
   background-color: white; }
   div#content ul {
     background-color: white;
-    width: 90%;
+    width: 85%;
     height: 110%;
     padding-top: 20px;
     list-style: none;
     margin-right: auto;
     margin-left: auto; }
     div#content ul li {
-      padding: 5px;
+      padding: 0px;
+      padding-top: 0px;
       margin-top: 8%;
       margin-bottom: 8%;
-      height: 30%;
+      height: 26%;
       width: 100%;
-      color: black;
       -webkit-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
       -moz-box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
       box-shadow: -10px -1px 24px 0px rgba(0, 0, 0, 0.5);
       border-radius: 5px 5px; }
-      div#content ul li span {
+      div#content ul li h1 {
+        text-align: center;
+        border-radius: 2px;
+        font-size: 1.4em;
         background-color: #ffa117;
-        width: auto;
-        height: auto;
-        font-weight: 600;
-        opacity: .6; }
-        div#content ul li span h1 {
-          opacity: .9;
-          text-align: center;
-          border-radius: 5px 5px;
-          font-size: 1.4em;
-          background-color: #ffa117;
-          width: auto; }
-        div#content ul li span span#duration {
-          font-size: .8em; }
+        color: white;
+        width: 100%;
+        height: 15%; }
       div#content ul li div#bottom_bar {
         text-align: right;
-        bottom: -30%;
-        height: 16%;
         position: relative;
+        bottom: -65%;
+        right: 5%;
+        height: 15%;
+        width: auto;
         border-radius: 5px;
-        opacity: .7; }
+        opacity: 1; }
         div#content ul li div#bottom_bar img {
-          position: relative;
-          bottom: -40%;
-          width: 8%; }
-        div#content ul li div#bottom_bar button#demo {
+          float: right;
+          display: block;
+          height: 100%;
           width: auto;
-          height: 200%;
+          margin-right: 2%; }
+        div#content ul li div#bottom_bar button#demo {
+          float: right;
+          width: 15%;
+          height: 100%;
           opacity: 1;
           padding: 1%;
           border-radius: 10%;
